@@ -22,5 +22,5 @@
 [1e-05] clkb is 1
 [1e-05] Finishing (t.bot)
 *-* All Finished *-*
-[10500] final (t)
-[1.05e-05] final (t.bot) count was 21
+[10000] final (t)
+[1e-05] final (t.bot) count was 21
